namespace Lab1Appz.Animal.Strategy;

public interface IMovementStrategy
{
    void Move(Animal animal);
}