namespace Lab1Appz.Habitat;

public class Wild : Habitat
{
}